:recycle: Refactor: 짐 각각 저장 -> 일괄 저장 및 전체 박스 개수 처리 리팩토링