@@ -2,14 +2,12 @@ package com.zzimple.estimate.service;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.zzimple.estimate.dto.request.MoveItemsBatchRequest;
 import com.zzimple.estimate.dto.request.MoveItemsDraftRequest;
 import com.zzimple.estimate.dto.response.MoveItemsDraftResponse;
+import com.zzimple.global.config.RedisKeyUtil;
 import com.zzimple.global.exception.CustomException;
 import com.zzimple.global.exception.MoveItemErrorCode;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.Map;
-import java.util.UUID;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.redis.core.ListOperations;
@@ -17,8 +15,7 @@ import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.stereotype.Service;
 
 import java.time.Duration;
-import java.util.ArrayList;
-import java.util.List;
+import java.util.*;
 
 @Slf4j
 @RequiredArgsConstructor
@@ -27,169 +24,110 @@ public class MoveItemsService {
 
   private final StringRedisTemplate redisTemplate;
   private final ObjectMapper objectMapper;
-
   private static final Duration EXPIRE = Duration.ofHours(1);
 
-  // Redis Key
+  // 기본 키
   private String keyOf(UUID draftId) {
-    return String.format("estimate:draft:%s:move-items", draftId);
+    return RedisKeyUtil.draftMoveItemsKey(draftId);
   }
 
-  // 1) 저장된 요청 불러오기
-  private List<MoveItemsDraftRequest> loadSaved(UUID draftId) throws JsonProcessingException {
-    log.info("[loadSaved] draftId={} 호출", draftId);
+  // 짐 목록 저장용, 박스 개수용 키
+  private String itemsKey(UUID draftId) { return keyOf(draftId) + ":items"; }
+  private String boxKey(UUID draftId)   { return keyOf(draftId) + ":box"; }
 
-    // Redis 리스트에서 해당 draftId 키에 저장된 모든 항목(JSON 문자열)을 조회함
-    List<String> jsons = redisTemplate.opsForList().range(keyOf(draftId), 0, -1);
 
-    if (jsons == null) {
-      log.info("[loadSaved] draftId={} 저장된 JSON 없음", draftId);
-      return List.of();
-    }
+  // 전체 박스 개수랑, 짐 목록들 가져와서 redis에 저장
+  public MoveItemsDraftResponse saveAllMoveItems(UUID draftId, MoveItemsBatchRequest batch) {
+    int boxCount = batch.getBoxCount();
+    List<MoveItemsDraftRequest> items = batch.getItems();
+    log.info("[saveAllMoveItems] draftId={} save {} items with boxCount={}",
+        draftId, items.size(), boxCount);
 
-    List<MoveItemsDraftRequest> list = new ArrayList<>();
+    // 1) 기존 데이터 삭제
+    redisTemplate.delete(itemsKey(draftId));
+    redisTemplate.delete(boxKey(draftId));
 
-    // JSON 문자열들을 MoveItemsDraftRequest 객체로 역직렬화해서 리스트에 추가하고, 각 항목의 entryId를 로그로 출력함
-    for (String j : jsons) {
+    // 2) 박스 개수 저장
+    redisTemplate.opsForValue()
+        .set(boxKey(draftId), String.valueOf(boxCount), EXPIRE);
+
+    // 3) 아이템 리스트 저장
+    ListOperations<String, String> ops = redisTemplate.opsForList();
+    List<MoveItemsDraftResponse.MoveItemResponseDto> dtos = new ArrayList<>();
+    for (MoveItemsDraftRequest req : items) {
       try {
-        MoveItemsDraftRequest r = objectMapper.readValue(j, MoveItemsDraftRequest.class);
-        list.add(r);
-        log.debug("[loadSaved] draftId={} → 불러온 엔트리 entryId={}", draftId, r.getEntryId());
-      } catch (JsonProcessingException e) {
-        log.error("[loadSaved] draftId={} JSON 역직렬화 실패", draftId, e);
-        throw new CustomException(MoveItemErrorCode.JSON_PARSE_FAIL);
+        String json = objectMapper.writeValueAsString(req);
+        ops.rightPush(itemsKey(draftId), json);
+        dtos.add(toDto(req));
+      } catch (JsonProcessingException ex) {
+        log.error("serialization failed for entryId={}", req.getEntryId(), ex);
+        throw new CustomException(MoveItemErrorCode.JSON_SERIALIZE_FAIL);
       }
     }
-    log.info("[loadSaved] draftId={} 총 {}개 엔트리 반환", draftId, list.size());
-    return list;
+    redisTemplate.expire(itemsKey(draftId), EXPIRE);
+
+    return new MoveItemsDraftResponse(boxCount, dtos);
   }
 
-  // 2) Request → Response DTO 변환
-  private MoveItemsDraftResponse.MoveItemResponseDto toDto(MoveItemsDraftRequest request) {
-    log.debug("[toDto] entryId={} 변환 시작", request.getEntryId());
-
-    // 역직렬화된 항목 객체에서 entryId 값을 추출함
-    String eid = request.getEntryId();
-
-    // Boolean 필드가 null이어도 NPE 없이 안전하게 true인지 확인함
-    boolean safeGlass   = Boolean.TRUE.equals(request.getHasGlass());
-    boolean safeFold    = Boolean.TRUE.equals(request.getIsFoldable());
-    boolean safeWheels  = Boolean.TRUE.equals(request.getHasWheels());
-    boolean safePrinter = Boolean.TRUE.equals(request.getHasPrinter());
-
-    // details가 null이면 빈 맵을 사용하고, 아니면 복사하여 새 맵으로 생성함
-    Map<String,Object> det = request.getDetails()!=null
-        ? new HashMap<>(request.getDetails())
-        : Collections.emptyMap();
-
-    log.debug("[toDto] entryId={} 변환 완료", request.getEntryId());
-
-    return new MoveItemsDraftResponse.MoveItemResponseDto(
-        eid,
-        request.getItemTypeId()!=null? request.getItemTypeId().longValue(): null,
-        request.getQuantity(),
-        request.getWidth(),
-        request.getHeight(),
-        request.getDepth(),
-        request.getMaterial(),
-        request.getSize(),
-        request.getShape(),
-        request.getCapacity(),
-        request.getDoorCount(),
-        request.getUnitCount(),
-        request.getFrame(),
-        safeGlass,
-        safeFold,
-        safeWheels,
-        safePrinter,
-        request.getPurifierType(),
-        request.getAcType(),
-        request.getSpecialNote(),
-        request.getRequestNote(),
-        det,
-        request.getBox()
-    );
-  }
-
-  // 3) 추가 메서드: 엔트리별 추가
-  public MoveItemsDraftResponse appendMoveItem(UUID draftId, MoveItemsDraftRequest request) {
-    log.info("[appendMoveItem] draftId={} itemTypeId={} 진입", draftId, request.getItemTypeId());
-
-    try {
-      // 요청 객체를 JSON 문자열로 직렬화하여 Redis 리스트에 저장함
-      // -> Redis는 자바 객체를 직접 저장할 수 없기 때문
-
-      String json = objectMapper.writeValueAsString(request);
-      redisTemplate.opsForList().rightPush(keyOf(draftId), json);
-      redisTemplate.expire(keyOf(draftId), EXPIRE);
-
-      log.info("[appendMoveItem] draftId={} entryId={} 저장됨", draftId, request.getEntryId());
-
-      // 요청 객체를 바로 DTO로 변환하여 단일 항목만 반환
-      MoveItemsDraftResponse.MoveItemResponseDto dto = toDto(request);
-
-      return new MoveItemsDraftResponse(List.of(dto));
-    } catch (JsonProcessingException ex) {
-      log.error("[appendMoveItem] draftId={} JSON 처리 오류", draftId, ex);
-      throw new CustomException(MoveItemErrorCode.JSON_SERIALIZE_FAIL);
-    }
-  }
-
-
-  // 4) 삭제: entryId 기준
-  public void removeMoveItemByEntryId(UUID draftId, String entryId) {
-    log.info("[removeMoveItem] draftId={} entryId={} 진입", draftId, entryId);
-
-    // Redis 리스트 연산 객체를 가져옴
-    ListOperations<String,String> ops = redisTemplate.opsForList();
-
-    List<MoveItemsDraftRequest> saved;
-
-    // Redis에 저장된 항목들을 불러오고, JSON 파싱 중 오류가 나면 예외 처리함
-    try {
-      saved = loadSaved(draftId);
-    } catch (JsonProcessingException e) {
-      log.error("[removeMoveItem] draftId={} JSON 파싱 오류", draftId, e);
-      throw new CustomException(MoveItemErrorCode.JSON_SERIALIZE_FAIL);
-    }
-
-
-    for (MoveItemsDraftRequest request : saved) {
-
-      // 만약에 같으면
-      if (entryId.equals(request.getEntryId())) {
-
-        try {
-          String j = objectMapper.writeValueAsString(request);
-          ops.remove(keyOf(draftId), 0, j);
-          log.info("[removeMoveItem] draftId={} entryId={} 삭제됨", draftId, entryId);
-        } catch (JsonProcessingException ignored) {
-          log.warn("[removeMoveItem] draftId={} entryId={} 삭제할 JSON 변환 실패", draftId, entryId);
-        }
-        break;
-      }
-    }
-    redisTemplate.expire(keyOf(draftId), EXPIRE);
-  }
-
-  // 5) 전체 조회 as Response
+  /**
+   * 저장된 짐 항목과 박스 개수를 조회
+   */
   public MoveItemsDraftResponse getMoveItemsAsResponse(UUID draftId) {
-    log.info("[getMoveItems] draftId={} 조회 요청", draftId);
+    // 1) 아이템 JSON 리스트 불러오기
+    List<String> jsons = redisTemplate.opsForList()
+        .range(itemsKey(draftId), 0, -1);
 
-    List<MoveItemsDraftRequest> saved;
+    // 2) JSON → DTO 파싱
+    List<MoveItemsDraftRequest> saved = Optional.ofNullable(jsons)
+        .orElseGet(Collections::emptyList)
+        .stream()
+        .map(j -> {
+          try {
+            return objectMapper.readValue(j, MoveItemsDraftRequest.class);
+          } catch (JsonProcessingException e) {
+            throw new CustomException(MoveItemErrorCode.JSON_PARSE_FAIL);
+          }
+        })
+        .toList();   // ← collect(Collectors.toList()) 대신 toList()
 
-    try {
-      saved = loadSaved(draftId);
-    } catch (JsonProcessingException e) {
-      log.error("[getMoveItems] draftId={} JSON 파싱 오류", draftId, e);
-      throw new RuntimeException(e);
-    }
+    // 3) 박스 개수 조회
+    String boxVal = redisTemplate.opsForValue().get(boxKey(draftId));
+    int boxCount = boxVal != null ? Integer.parseInt(boxVal) : 0;
 
-    // 전체 조회
-    List<MoveItemsDraftResponse.MoveItemResponseDto> dto = saved.stream().map(this::toDto).toList();
+    // 4) 응답 DTO 변환
+    List<MoveItemsDraftResponse.MoveItemResponseDto> dtos = saved.stream()
+        .map(this::toDto)
+        .toList();  // ← collect(Collectors.toList()) 대신 toList()
 
-    log.info("[getMoveItems] draftId={} 반환할 항목 수={}", draftId, dto.size());
+    return new MoveItemsDraftResponse(boxCount, dtos);
+  }
 
-    return new MoveItemsDraftResponse(dto);
+
+  // DTO 변환 헬퍼
+  private MoveItemsDraftResponse.MoveItemResponseDto toDto(MoveItemsDraftRequest req) {
+    return new MoveItemsDraftResponse.MoveItemResponseDto(
+        req.getEntryId(),
+        req.getItemTypeId() != null ? req.getItemTypeId().longValue() : null,
+        req.getQuantity(),
+        req.getWidth(),
+        req.getHeight(),
+        req.getDepth(),
+        req.getMaterial(),
+        req.getSize(),
+        req.getShape(),
+        req.getCapacity(),
+        req.getDoorCount(),
+        req.getUnitCount(),
+        req.getFrame(),
+        Boolean.TRUE.equals(req.getHasGlass()),
+        Boolean.TRUE.equals(req.getIsFoldable()),
+        Boolean.TRUE.equals(req.getHasWheels()),
+        Boolean.TRUE.equals(req.getHasPrinter()),
+        req.getPurifierType(),
+        req.getAcType(),
+        req.getSpecialNote(),
+        req.getRequestNote(),
+        req.getDetails()
+    );
   }
 }
